--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
 	"dependencies": {
 		"bcrypt": "^5.0.1",
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"express-async-handler": "^1.2.0",
+		"express-session": "^1.17.2",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.1.2"
 	}
 }
