--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.1.2",
 		"nodemailer": "^6.7.2",
-		"nodemon": "^2.0.15"
+		"nodemon": "^2.0.15",
+		"path": "^0.12.7"
 	}
 }
