--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"license": "MIT",
+	"type": "module",
 	"dependencies": {
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.0",
@@ -14,13 +15,15 @@
 		"express-session": "^1.17.2",
 		"handlebars": "^4.7.7",
 		"jsonwebtoken": "^8.5.1",
+		"module": "^1.2.5",
 		"mongoose": "^6.1.2",
 		"nodemailer": "^6.7.2",
 		"nodemon": "^2.0.15",
-		"path": "^0.12.7"
+		"path": "^0.12.7",
+		"type": "^2.5.0"
 	},
 	"scripts": {
-		"start": "node server/server.js"
+		"start": "node scr/server.js"
 	},
 	"description": "",
 	"repository": {
