--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
 	"type": "module",
 	"dependencies": {
 		"bcrypt": "^5.0.1",
-		"body-parser": "^1.19.0",
+		"body-parser": "^1.19.1",
 		"cors": "^2.8.5",
 		"crypto": "^1.0.1",
 		"dotenv": "^10.0.0",
-		"express": "^4.17.1",
+		"express": "^4.17.2",
 		"express-async-handler": "^1.2.0",
 		"express-session": "^1.17.2",
 		"handlebars": "^4.7.7",
 		"jsonwebtoken": "^8.5.1",
-		"module": "^1.2.5",
+		"module": "^1.0.0",
+		"mongodb": "^4.2.2",
 		"mongoose": "^6.1.2",
+		"mongosh": "^0.0.1",
 		"nodemailer": "^6.7.2",
 		"nodemon": "^2.0.15",
 		"path": "^0.12.7",
