--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"mongodb": "^4.2.2",
 		"mongoose": "^6.1.2",
 		"mongosh": "^0.0.1",
+		"mysql": "^2.18.1",
 		"nodemailer": "^6.7.2",
 		"nodemon": "^2.0.15",
 		"path": "^0.12.7",
