--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"express": "^4.17.2",
 		"express-async-handler": "^1.2.0",
 		"express-session": "^1.17.2",
+		"express-validator": "^6.14.0",
 		"handlebars": "^4.7.7",
 		"jsonwebtoken": "^8.5.1",
 		"module": "^1.0.0",
