--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-	"name": "backend",
-	"version": "1.0.0",
-	"main": "index.js",
-	"license": "MIT",
-	"type": "module",
-	"dependencies": {
-		"bcrypt": "^5.0.1",
-		"body-parser": "^1.19.1",
-		"cors": "^2.8.5",
-		"crypto": "^1.0.1",
-		"dotenv": "^10.0.0",
-		"express": "^4.17.2",
-		"express-async-handler": "^1.2.0",
-		"express-session": "^1.17.2",
-		"express-validator": "^6.14.0",
-		"handlebars": "^4.7.7",
-		"jsonwebtoken": "^8.5.1",
-		"module": "^1.0.0",
-		"mongodb": "^4.2.2",
-		"mongoose": "^6.1.2",
-		"mongosh": "^0.0.1",
-		"mysql": "^2.18.1",
-		"nodemailer": "^6.7.2",
-		"nodemon": "^2.0.15",
-		"path": "^0.12.7",
-		"type": "^2.5.0"
-	},
-	"scripts": {
-		"start": "node src/server.js",
-		"dev": "nodemon src/server.js"
-	},
-	"description": "",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/theMVPshop/flipcard_be.git"
-	},
-	"author": "",
-	"bugs": {
-		"url": "https://github.com/theMVPshop/flipcard_be/issues"
-	},
-	"homepage": "https://github.com/theMVPshop/flipcard_be#readme"
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "type": "module",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "express-async-handler": "^1.2.0",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
+    "handlebars": "^4.7.7",
+    "jsonwebtoken": "^8.5.1",
+    "module": "^1.0.0",
+    "mongodb": "^4.2.2",
+    "mongoose": "^6.1.2",
+    "mongosh": "^0.0.1",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
+    "path": "^0.12.7",
+    "type": "^2.5.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/theMVPshop/flipcard_be.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/theMVPshop/flipcard_be/issues"
+  },
+  "homepage": "https://github.com/theMVPshop/flipcard_be#readme"
 }
